# tb2e-foundry-vtt

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  playwright.config.mjs  skills-lock.json  system.json  tasks.md  tb2e.css  tb2e.mjs
.claude/skills/: set-design
.github/workflows/: release.yml
cards/: conflict-actions.json
lang/: en.json
less/: elements.less  grind-tracker.less  tb2e.less
less/camp/: panel.less
less/chat/: advancement-card.less  base-card.less  burden-card.less  conflict-cards.less  grind-cards.less  loot-draw.less  nature-crisis.less  roll-card.less  versus-card.less  wise-advancement.less
less/conflict/: cards.less  character-panel.less  distribution.less  inline-rolling.less  maneuver-spend.less  panel.less  tracker.less  window.less
less/dice/: advancement-dialog.less  roll-dialog.less
less/sheets/: abilities.less  biography.less  camp.less  gear-sheet.less  header.less  inventory.less  invocation-sheet.less  magic.less  monster.less  npc.less  reference-bar.less  rollable.less  shell.less  skills.less  spell-sheet.less  tabs.less  traits-wises.less  wizard.less
less/variables/: base.less  dark.less  light.less
module/: config.mjs  session.mjs
module/applications/: _module.mjs  grind-tracker.mjs
reference-extractor/: pyproject.toml
reference-extractor/src/tb2e_ref/: cli.py  extract.py  index.py  search.py
templates/: grind-tracker.hbs
token-builder/: generate-all.sh  pyproject.toml
token-builder/src/tb2e_token/: cli.py  generate.py  pipeline.py  prompts.py
utils/: packs.mjs
(+1051 files in other folders)
