[project]
name = "tb2e-ref"
version = "0.1.0"
description = "Torchbearer 2E PDF reference extractor"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.25",
]

[project.scripts]
tb2e-ref = "tb2e_ref.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tb2e_ref"]
